src/sass/myservice-modal.scss
// Modal styling - used across Add Claim flow

.modal-window {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.6);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 999;
    opacity: 0;
    pointer-events: none;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;

	&:target, &.modal-visible {
	    opacity: 1;
	    pointer-events: auto;
		display:block;
	}
	&>div {
		background: #fff;
	    position: relative;
	    margin: 0 auto;
	    padding: 2rem;
	    color: #444;
    	-webkit-overflow-scrolling: touch;
		overflow-y: auto;
		@media only screen and (min-width: $small-handheld) {
			width:80%;
			margin:3% auto;
			border-radius: 0.3em;
			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
		}
		@media only screen and (min-width: $large-handheld) {
			width:40%;
			margin:5% auto;
			max-width:66em;
		}
		@media (min-width: 760px) {
			margin:10% auto;
			width:500px;
		}
	}
	h2 {
		font-weight:600;
		margin-top:1.5em;
	}

	&[aria-hidden=true] {
		visibility:hidden;
	}
}
.modal-close {
	float:right;
	margin:-1.5em;
	border-bottom:0px!important;
	max-height:40px;
	background-image: url('../images/ico-close-thin-black.svg');
	background-repeat: no-repeat;
	background-size:32px 32px;
	background-position: 6px 5px;
	padding:0.5em;
	padding-left:2.8em;
	padding-right:0.7em;
	display: block;
    &:focus {
		background-color:#fff;
	}
	&:hover {
		background-color: $uikit-colour-Link;
	}
}


.modal-buttons {
    border-top: 1px solid #e2e2e2 !important;
    clear: both;
    margin: 2.4em 0 0 0;
    padding-top: 1em;
}

